--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -17,7 +17,38 @@
     "8. Resize Textbox with The Window\n",
     "9. Run the Window \n",
     "    \n",
-    "1. Introduction:\n"
+    "Introduction: Aa a Python beginner I am always looking for ways to apply my basic Python skills to create different kinds of applications. One of the most useful projects is a text editor application. It is perfect for writing down notes and saving them to read later. Have you ever thought about creating your own text editor app? If yes, I am sure this thorough description of building my simple text editor will help you get started.  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abd877a2-63b4-49af-856f-7456835c9201",
+   "metadata": {},
+   "source": [
+    "### 1. Import GUI(Tkinter) and Modules\n",
+    "My first step was to import Tkinter. It is a Graphical User Interface Library for Python. It comes with Python. So,you don't need to install it separately. I imported modules like- filedialog, which allows a small file selection window to appear inside the main window; messagebox, which creates pop-up alert boxes; and font, which helps control the text style in my applicatiuon."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10895883-5045-47ba-8287-f2b857fd85d8",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import tkinter as tk\n",
+    "from tkinter import filedialog\n",
+    "from tkinter import messagebox\n",
+    "from tkinter import font\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "895078af-c8f0-41f4-b1cd-1e92927dad90",
+   "metadata": {},
+   "source": [
+    "### 2. Create a Function to Trigger Save Button \n",
+    "I create a function that triggers the \"Save\" button that I have already defined. Though I mention this function at a second point you must define the buttons, frame and else widgets earlier to create the function. This is a self made function, therefore you can name the function as your choice. To understand better and easy I named it as ``` sace_task()```. From line 1, and character 0 to the last character every entered values are retrieved from the textbox and stored in a variable ```texts```. The whitespaces are removed through```.strip()```.\n",
+    "I have put a condtion to not save an empty file when there is nothing in the textbox. So, When the save button is clicked without entering any text then a pop-up messagebox"
    ]
   }
  ],
