--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -48,8 +48,20 @@
    "source": [
     "### 2. Create a Function to Trigger Save Button \n",
     "I create a function that triggers the \"Save\" button that I have already defined. Though I mention this function at a second point you must define the buttons, frame and else widgets earlier to create the function. This is a self made function, therefore you can name the function as your choice. To understand better and easy I named it as ``` sace_task()```. From line 1, and character 0 to the last character every entered values are retrieved from the textbox and stored in a variable ```texts```. The whitespaces are removed through```.strip()```.\n",
-    "I have put a condtion to not save an empty file when there is nothing in the textbox. So, When the save button is clicked without entering any text then a pop-up messagebox"
+    "I have put a condtion to not save an empty file when there is nothing in the textbox. So, When the save button is clicked without entering any text then a pop-up messagebox shows that ``` Textbox is empty. Nothing to save```. \n",
+    "\n",
+    "A filedialog box ```Save As``` is opened. Then, I kept ```.txt``` file type as default. Besides, I keep the option of saving all types of files as ```\"All files,\" \"*.*\"```\n",
+    "\n",
+    "The next code is responsible for saving the contents of a Python Tkinter application to a file. First, it checks if ```save_path``` contains a valid file path, which would be the case only if I clicked ```Save``` in the file dialog. Inside a try block, it opens the file in write mode using Python’s with statement, ensuring the file is automatically closed after the operation. The ```file.write(texts)``` line writes the text content from the variable texts into the file. If the save is successful, a Tkinter information message box is displayed to notify the user. If any error occurs during the process—such as invalid permissions or an inaccessible location—the except block catches it and shows an error message instead."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aab207ff-98b6-425d-a29a-6ad24d6afc1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
