--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -46,22 +46,25 @@
    "id": "895078af-c8f0-41f4-b1cd-1e92927dad90",
    "metadata": {},
    "source": [
-    "### 2. Create a Function to Trigger Save Button \n",
-    "I create a function that triggers the \"Save\" button that I have already defined. Though I mention this function at a second point you must define the buttons, frame and else widgets earlier to create the function. This is a self made function, therefore you can name the function as your choice. To understand better and easy I named it as ``` sace_task()```. From line 1, and character 0 to the last character every entered values are retrieved from the textbox and stored in a variable ```texts```. The whitespaces are removed through```.strip()```.\n",
-    "I have put a condtion to not save an empty file when there is nothing in the textbox. So, When the save button is clicked without entering any text then a pop-up messagebox shows that ``` Textbox is empty. Nothing to save```. \n",
+    "### 2. Create a Function to Trigger \"Save\" Button \n",
+    "I created a function that is triggered by the ```Save``` button I had already defined. Although I mention this function as the second point, you must define the buttons, frames, and other widgets before creating the function. This is a self-made function, so you can name it whatever you like. To make it simple and easy to understand, I named it ```save_task()```.\n",
     "\n",
-    "A filedialog box ```Save As``` is opened. Then, I kept ```.txt``` file type as default. Besides, I keep the option of saving all types of files as ```\"All files,\" \"*.*\"```\n",
+    "From line 1, character 0 to the last character, all values entered in the textbox are retrieved and stored in a variable called texts. Any leading or trailing whitespace is removed using ```.strip()```.\n",
     "\n",
-    "The next code is responsible for saving the contents of a Python Tkinter application to a file. First, it checks if ```save_path``` contains a valid file path, which would be the case only if I clicked ```Save``` in the file dialog. Inside a try block, it opens the file in write mode using Python’s with statement, ensuring the file is automatically closed after the operation. The ```file.write(texts)``` line writes the text content from the variable texts into the file. If the save is successful, a Tkinter information message box is displayed to notify the user. If any error occurs during the process—such as invalid permissions or an inaccessible location—the except block catches it and shows an error message instead."
+    "I added a condition to prevent saving an empty file when there is nothing in the textbox. If the save button is clicked without entering any text, a pop-up message box appears showing ```Textbox is empty. Nothing to save.```\n",
+    "\n",
+    "After that, a \"Save As\" file dialog box opens. I set ```.txt``` as the default file type, but also kept the option of saving as any file type by adding ```\"All Files\", \"*.*\"```\n",
+    "\n",
+    "The next block of code is responsible for saving the contents of the Tkinter application to the chosen file. First, it checks if ```save_path``` contains a valid file path, which happens only if \"Save\" was clicked in the file dialog. Inside a try block, the file is opened in write mode using Python’s with statement, which ensures the file is automatically closed after the operation. The ```file.write(texts)``` line writes the text from the texts variable into the file. If the save is successful, a Tkinter information message box is displayed to notify the user. If any error occurs during the process—such as permission issues or an inaccessible location—the \"except\" block catches it and shows an error message instead."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aab207ff-98b6-425d-a29a-6ad24d6afc1c",
+   "cell_type": "markdown",
+   "id": "97e1c379-a229-4680-ab52-6f14c099d769",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 3. Create a Function to Trigger \"Open\" Button\n"
+   ]
   }
  ],
  "metadata": {
