modified text editor

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -60,11 +60,109 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0df50286-5aa0-4bee-b286-d51b1cf6058b",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "def save_task():\n",
+    "    # Get the text from the text box\n",
+    "    texts = text_box.get(\"1.0\", tk.END).strip()\n",
+    "\n",
+    "    if not texts:\n",
+    "        messagebox.showwarning(\"Empty\", \"Text box is empty. Nothing to save.\")\n",
+    "        return\n",
+    "\n",
+    "    # Ask for save location (asksaveasfilename, not askopenfilename)\n",
+    "    save_path = filedialog.asksaveasfilename(\n",
+    "        defaultextension=\".txt\",\n",
+    "        filetypes=[(\"Text Files\", \"*.txt\"), (\"All Files\", \"*.*\")]\n",
+    "    )\n",
+    "\n",
+    "    if save_path:\n",
+    "        try:\n",
+    "            with open(save_path, \"w\") as file:\n",
+    "                file.write(texts)\n",
+    "            messagebox.showinfo(\"Saved\", \"File saved successfully!\")\n",
+    "        except:\n",
+    "            messagebox.showerror(\"Error\", \"Could not save file!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "97e1c379-a229-4680-ab52-6f14c099d769",
    "metadata": {},
    "source": [
-    "### 3. Create a Function to Trigger \"Open\" Button\n"
+    "### 3. Create a Function to Trigger \"Open\" Button\n",
+    "This function runs when I click the \"Open\" button. When triggered, it opens a file selection dialog where you can choose a file to read. I set the default file type as ```.txt```, but there’s also an ```All Files``` option available in the dialog window. If a file is chosen, the program reads its content and stores it in a variable called ```content```. Before displaying the new data, the text box is completely cleared — from line 1, character 0, to the very last character. Then, the stored content is inserted into the empty text box.\n",
+    "If any error occurs during this process, such as an invalid file or a read failure, the program displays an error pop-up message that says: ```Error. Could not read file!```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4694b535-526a-4c46-8619-65dbb349fe6b",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "def open_file():\n",
+    "\t# open the file dialog window on the screen when \"Open\" button is clicked\n",
+    "\t# \"Text Files\" is the label shows in the file dialog dropdown \n",
+    "\t# The lable also includes \"all files\"\n",
+    "\t#  * means any name before .txt file(file type)\n",
+    "\t# *.* means any name before and after dot\n",
+    "\n",
+    "\topen_filedialog_path2 = filedialog.askopenfilename(\n",
+    "\t\tfiletypes= [(\"Text Files\", \"*.txt\"),(\"all Files\", \"*.*\")]\n",
+    "\t\t)\n",
+    "\n",
+    "\tif open_filedialog_path2:\n",
+    "\t\t# try to open file dialog path and read the files \n",
+    "\t\ttry:\n",
+    "\t\t\twith open(open_filedialog_path2,\"r\") as file:\n",
+    "\t\t\t\tcontent = file.read()\n",
+    "\t\t\t\t# clear previous content in the text box\n",
+    "\t\t\t\ttext_box.delete(\"1.0\", tk.END)\n",
+    "\t\t\t\t# insert the new content\n",
+    "\t\t\t\ttext_box.insert(tk.END, content)\n",
+    "\t\texcept:\n",
+    "\t\t\tmessagebox.showerror(\"Error\", \"Could not read file!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "830a0a07-3833-474d-be5f-8d290054769c",
+   "metadata": {},
+   "source": [
+    "### 4. Enable mouse Wheel Scrolling for Scrollbar\n",
+    "To make the text box more comfortable, I created a function called ```on_mouse_wheel()```. This function is triggered whenever the mouse wheel is scrolled while the cursor is over the text box.\n",
+    "\n",
+    "The event parameter provides information about the scroll action. In this case, ```event.delta``` tells us how much the mouse wheel has moved. A positive value means the wheel is scrolled down, and a negative value means it’s scrolled up.\n",
+    "\n",
+    "Inside the function, I use ```text_box.yview_scroll()``` to move the text vertically. The first argument controls the number of units to scroll, and the second argument \"units\" specifies the scroll type. Since ```event.delta``` can vary depending on the scroll direction, I multiply it by ```-1/120``` to ensure the scrolling feels natural and consistent in both directions.\n",
+    "\n",
+    "This simple function gives the text box a smooth scrolling experience, making navigation through long text much easier.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3fad953-c438-444e-8bec-01837ebd157f",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "def on_mouse_wheel(event):\n",
+    "\t# This function is used to scroll the text box when mouse wheel is scrolled\n",
+    "\t# event.delta is the amount of scroll\n",
+    "\t# positive value means scroll down, negative means scroll up\n",
+    "\ttext_box.yview_scroll(int(-1*(event.delta/120)), \"units\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e88be44f-460c-4368-837c-b210c0bfde1e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
