--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -5,6 +5,14 @@
    "id": "53b6238f-abe3-49ec-b71d-8de592a58e67",
    "metadata": {},
    "source": [
+    "As a Python beginner I am always looking for ways to apply my basic Python skills to create different kinds of applications. One of the most useful projects is a text editor application. It is perfect for writing down notes and saving them to read later. Have you ever thought about creating your own text editor app? If yes, I am sure this thorough description of building my simple text editor will help you get started."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6b1934a-83c5-45a0-adee-0f964e2de713",
+   "metadata": {},
+   "source": [
     "## Table of Contents\n",
     "1. Import GUI Modules\n",
     "2. Create a Function to Trigger the \"Save\" Button\n",
@@ -15,9 +23,7 @@
     "7. Add a Frame & Resize it\n",
     "8. Add Textbox, Scrollbar & \"Save\" Button\n",
     "9. Bind Mousewheel Event to the Textbox and Add \"Open\" Button\n",
-    "10. Run the Main Application\n",
-    "    \n",
-    "Introduction: As a Python beginner I am always looking for ways to apply my basic Python skills to create different kinds of applications. One of the most useful projects is a text editor application. It is perfect for writing down notes and saving them to read later. Have you ever thought about creating your own text editor app? If yes, I am sure this thorough description of building my simple text editor will help you get started.  \n"
+    "10. Run the Main Application\n"
    ]
   },
   {
@@ -93,7 +99,7 @@
    "metadata": {},
    "source": [
     "### 3. Create a Function to Trigger \"Open\" Button\n",
-    "This function runs when I click the \"Open\" button. When triggered, it opens a file selection dialog where you can choose a file to read. I set the default file type as ```.txt```, but there’s also an All Files option available in the dialog window. If a file is chosen, the program reads its content and stores it in a variable called ```content```. Before displaying the new data, the text box is completely cleared — from line 1, character 0, to the very last character. Then, the stored content is inserted into the empty text box. If any error occurs during this process, such as an invalid file or a read failure, the program displays an error pop-up message that says: ```Error Couldn't read file!```"
+    "This function runs when I click the \"Open\" button. When triggered, it opens a file selection dialog where you can choose a file to read. I set the default file type as ```.txt```, but there’s also an ```All Files``` option available in the dialog window. If a file is chosen, the program reads its content and stores it in a variable called ```content```. Before displaying the new data, the text box is completely cleared — from line 1, character 0, to the very last character. Then, the stored content is inserted into the empty text box. If any error occurs during this process, such as an invalid file or a read failure, the program displays an error pop-up message that says: ```Error Couldn't read file!```"
    ]
   },
   {
@@ -209,10 +215,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b7b0cffc-0cd9-4e9c-8bb0-5b26ddeed50d",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# add a frame first\n",
+    "frame1 = tk.Frame(root, bg=\"gray\")\n",
+    "frame1.grid(row=1, column=0, columnspan=2, padx=15, pady=3, sticky='nsew')\n",
+    "\n",
+    "# Make frame1 row and column resizable\n",
+    "frame1.grid_rowconfigure(1, weight=1)\n",
+    "frame1.grid_columnconfigure(0, weight=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "60007226-c89b-4ab1-9db9-09df97dc7045",
    "metadata": {},
    "source": [
-    "### 8. Add Textbox, Scrollbar & \"Open\" Button  \n",
+    "### 8. Add Textbox, Scrollbar & \"Save\" Button  \n",
     "To type and view texts I add the main text box as ```text_box``` inside the frame. I use a \"monospaced font\" (Courier New, size 16). Then with ```.grid``` I place it.\n",
     "\n",
     "To allow scrolling through long text, I add a vertical scrollbar next to the text box. The scrollbar is placed in row 1, column 1 so it doesn’t overlap with the text box, it means inside the frame but outside the textbox and I set its command to ```text_box.yview``` so it controls the text box’s vertical movement. The text box is also linked to the scrollbar with ```yscrollcommand=scroll_bar.set```.\n",
